fix(database): add isClosed method to check database connection status